# Ardy-IA

./: .env  .gitignore  README.md  __init__.py.bat  docker-compose.yml  install.bat  package-lock.json  pyproject.toml  requirements.txt  walle.db
backend/: config.py  main.py
backend/agents/: __init__.py
backend/services/: memory_service.py  rag_service.py  stt_service.py  tts_service.py
chromadb_data/: chroma.sqlite3
frontend/: index.html
notepads/: usingllm.ipynb
notepads/.ipynb_checkpoints/: usingllm-checkpoint.ipynb
walle/: .env  install.bat  install_voice.bat  requirements.txt  start.bat  start_ollama.bat  walle.db
walle/backend/: config.py  main.py
walle/backend/agents/: language_tutor.py  researcher.py
walle/backend/models/: schemas.py
walle/backend/services/: rag_service.py  stt_service.py  tts_service.py
walle/chromadb_data/: chroma.sqlite3
walle/frontend/: index.html
