[project]
name = "agenticaiapp"
version = "0.1.0"
description = ""
authors = [
    {name = "alexandralacruz",email = "alexandra.lacruz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "fastapi (>=0.119.1,<0.120.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "crewai (>=1.0.0,<2.0.0)",
    "litellm (>=1.78.5,<2.0.0)",
    "langchain (>=1.0.1,<2.0.0)",
    "langchain-community (>=0.4,<0.5)",
    "langchain-ollama (>=1.0.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "agenticaiapp", from = "src"}]


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
